--- a/Happilly-backend/appsettings.json
+++ b/Happilly-backend/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Happilly_backendContext": "Server=(localdb)\\mssqllocaldb;Database=Happilly_backend.Data;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "HappillyConnStr": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=HappillyDB;Integrated Security=True"
+  }
 }
