--- a/Happilly.Presentation/appsettings.json
+++ b/Happilly.Presentation/appsettings.json
@@ -7,8 +7,10 @@
   },
   "AllowedHosts": "*",
   "Database": {
-    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=HappillyDbContext;Trusted_Connection=True;Integrated Security=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;;MultiSubnetFailover=False",
+    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=HappillyDbContext;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "UseLazyLoading": true,
     "DbProvider": "mssql"
   }
 }
+//Laptop: Server=(localdb)\MSSQLLocalDB;Database=HappillyDbContext;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False
+//PC: Server=(localdb)\\MSSQLLocalDB;Database=HappillyDbContext;Trusted_Connection=True;Integrated Security=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;;MultiSubnetFailover=False
