--- a/Happilly.Persistence/appsettings.json
+++ b/Happilly.Persistence/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "Database": {
-    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=HappillyDbContext;Trusted_Connection=True;Integrated Security=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;;MultiSubnetFailover=False",
+    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=HappillyDbContext;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "UseLazyLoading": true,
     "DbProvider": "mssql"
   }
