--- a/Happilly.Persistence/appsettings.json
+++ b/Happilly.Persistence/appsettings.json
@@ -1,7 +1,24 @@
-﻿{
+﻿//{
+//  "Database": {
+//    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=HappillyDbContext;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+//    "UseLazyLoading": true,
+//    "DbProvider": "mssql"
+//  }
+//}
+
+{
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
   "Database": {
-    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=HappillyDbContext;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "ConnectionString": "Host=localhost;Port=5432;Database=HappillyDbContext;Username=postgres;Password=mysecretpassword;",
     "UseLazyLoading": true,
-    "DbProvider": "mssql"
+    "DbProvider": "psql"
   }
 }
+//Laptop: Server=(localdb)\MSSQLLocalDB;Database=HappillyDbContext;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False
+//PC: Server=(localdb)\\MSSQLLocalDB;Database=HappillyDbContext;Trusted_Connection=True;Integrated Security=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;;MultiSubnetFailover=False
