--- a/Happilly.Presentation/appsettings.json
+++ b/Happilly.Presentation/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "Database": {
-    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=HappillyDbContext;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "ConnectionString": "Host=happillydb;Port=5432;Database=HappillyDbContext;Username=postgres;Password=postgres;",
     "UseLazyLoading": true,
-    "DbProvider": "mssql"
+    "DbProvider": "psql"
   }
 }
 //Laptop: Server=(localdb)\MSSQLLocalDB;Database=HappillyDbContext;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False
