--- a/Happilly.Presentation/appsettings.Development.json
+++ b/Happilly.Presentation/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "Database": {
+    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=HappillyDbContext;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "UseLazyLoading": true,
+    "DbProvider": "mssql"
   }
 }
+//Laptop: Server=(localdb)\MSSQLLocalDB;Database=HappillyDbContext;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False
+//PC: Server=(localdb)\\MSSQLLocalDB;Database=HappillyDbContext;Trusted_Connection=True;Integrated Security=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;;MultiSubnetFailover=False
