--- a/Happilly.Presentation/appsettings.json
+++ b/Happilly.Presentation/appsettings.json
@@ -5,12 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Database": {
-    "ConnectionString": "Host=happillydb;Port=5432;Database=HappillyDbContext;Username=postgres;Password=postgres;",
-    "UseLazyLoading": true,
-    "DbProvider": "psql"
-  }
+  "AllowedHosts": "*"
 }
 //Laptop: Server=(localdb)\MSSQLLocalDB;Database=HappillyDbContext;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False
 //PC: Server=(localdb)\\MSSQLLocalDB;Database=HappillyDbContext;Trusted_Connection=True;Integrated Security=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;;MultiSubnetFailover=False
